--- a/index.html
+++ b/index.html
@@ -1,39 +1,46 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>free caregiver courses online in usa for foreigners</title>
-      <meta name="robots" content="index, follow">
- <style>
-  /* Fullscreen iframe styles */
-  #iframe-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border: none;
-    z-index: 9999;
-  }
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  #iframe-container iframe {
-    width: 100%;
-    height: 100%;
-    border: none;
-  }
-</style>
+  <title>Free nursing certificate online someday you get it now and its 100% free </title>
 
-<div id='iframe-container'>
-  <iframe frameborder='0' src='https://www.paypalads.com'/>
-</div>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <!-- SEO Meta Description -->
+  <meta name="description" content="nursing diploma certificate - Get a nursing certificate online someday you get it now and its real 100%">
 
-    <link rel="stylesheet" href="styles/general.css">
-    <link rel="stylesheet" href="styles/header.css">
-    <link rel="stylesheet" href="styles/video.css">
-    <link rel="stylesheet" href="styles/sidebar.css">
-  </head>
-  <body>
+  <!-- Robots -->
+  <meta name="robots" content="index, follow" />
 
+  <!-- Fonts and Styles -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
+
+  <link rel="stylesheet" href="styles/general.css" />
+  <link rel="stylesheet" href="styles/header.css" />
+  <link rel="stylesheet" href="styles/video.css" />
+  <link rel="stylesheet" href="styles/sidebar.css" />
+</head>
+
+<body>
+  <main>
+    <section style="text-align: center;">
+      
+<p style="background: 0px 50% rgb(255, 255, 255); border: 0px; color: #333333; font-family: &quot;Open Sans&quot;, Arial, sans-serif; font-size: 22px; line-height: 1.6em; margin: 0px 0px 15px; outline: 0px; padding: 0px; text-align: center; vertical-align: baseline;"><strong style="background: 0px 50%; border: 0px; font-size: 24px; margin: 0px; outline: 0px; padding: 0px; text-align: left; vertical-align: baseline;"><span style="background: 0px 50%; border: 0px; font-family: georgia; font-size: large; line-height: 1.6em; margin: 0px; outline: 0px; padding: 0px; vertical-align: baseline;">This Free Online Course Includes:</span></strong></p><h2 class="wp-block-heading has-text-align-center" style="background: 0px 50% rgb(255, 255, 255); border: 0px; font-family: &quot;Open Sans&quot;, Arial, sans-serif; font-size: 24px; margin: 0px 0px 15px; outline: 0px; padding: 0px; text-align: center; vertical-align: baseline;"><strong style="background: 0px 50%; border: 0px; margin: 0px; outline: 0px; padding: 0px; vertical-align: baseline;"><span color="rgb(51, 51, 51) !important" style="background: 0px 50%; border: 0px; font-family: georgia; font-size: large; line-height: 1.6em; margin: 0px; outline: 0px; padding: 0px; vertical-align: baseline;">CPD Accreditation&nbsp;</span></strong></h2><div><strong style="background: 0px 50%; border: 0px; margin: 0px; outline: 0px; padding: 0px; vertical-align: baseline;"><span color="rgb(51, 51, 51) !important" style="background: 0px 50%; border: 0px; font-family: georgia; font-size: large; line-height: 1.6em; margin: 0px; outline: 0px; padding: 0px; vertical-align: baseline;">
+  
+  <script async="" crossorigin="anonymous" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2269884583846743"></script>
+<!--Vertical ad-->
+<ins class="adsbygoogle" data-ad-client="ca-pub-2269884583846743" data-ad-format="auto" data-ad-slot="2115767840" data-full-width-responsive="true" style="display: block;"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+  
+  </span></strong></div><div style="background: 0px 50% rgb(255, 255, 255); border: 0px; color: #333333; font-family: &quot;Open Sans&quot;, Arial, sans-serif; font-size: 22px; line-height: 1.6em; margin: 0px; outline: 0px; padding: 0px; text-align: center; vertical-align: baseline;"><strong style="background: 0px 50%; border: 0px; margin: 0px; outline: 0px; padding: 0px; vertical-align: baseline;"><span style="background: 0px 50%; border: 0px; font-family: georgia; line-height: 1.6em; margin: 0px; outline: 0px; padding: 0px; vertical-align: baseline;"><b style="background: 0px 50%; border: 0px; font-size: xx-large; margin: 0px; outline: 0px; padding: 0px; vertical-align: baseline;"><span style="background: 0px 50%; border: 0px; font-size: 22px; line-height: 1.6em; margin: 0px; outline: 0px; padding: 0px; vertical-align: baseline;"><a href="https://alison.com/course/diploma-in-nursing-and-patient-care-revised-2017?utm_source=alison_user&amp;utm_medium=affiliates&amp;utm_campaign=36843108" rel="nofollow" style="background: 0px 50%; border: 0px; color: #2b64ff; margin: 0px; outline: 0px; padding: 0px; text-decoration-line: none; transition: color 0.3s; vertical-align: baseline;" target="_blank"><span style="background: 0px 50%; border: 0px; color: white; line-height: 1.6em; margin: 0px; outline: 0px; padding: 0px; vertical-align: baseline;"><span color="rgb(51, 51, 51) !important" style="background: 0px 50% rgb(0, 123, 255); border-radius: 5px; border: 0px; box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px; display: inline-block; line-height: 1.6em; margin: 0px; outline: 0px; padding: 15px 25px; transition-duration: 0.3s; transition-property: background-color; vertical-align: baseline;">DIPLOMA Nursing course Click-Here-To Start Learning</span></span></a></span></b></span></strong></div><p style="background: 0px 50% rgb(255, 255, 255); border: 0px; color: #333333; font-family: &quot;Open Sans&quot;, Arial, sans-serif; font-size: 22px; line-height: 1.6em; margin: 0px 0px 15px; outline: 0px; padding: 0px; vertical-align: baseline;"><strong style="background: 0px 50%; border: 0px; margin: 0px; outline: 0px; padding: 0px; vertical-align: baseline;"><span style="background: 0px 50%; border: 0px; font-family: georgia; line-height: 1.6em; margin: 0px; outline: 0px; padding: 0px; vertical-align: baseline;"></span></strong></p><div class="separator" style="clear: both; text-align: center;"><strong style="background: 0px 50%; border: 0px; margin: 0px; outline: 0px; padding: 0px; vertical-align: baseline;"><span style="background: 0px 50%; border: 0px; font-family: georgia; line-height: 1.6em; margin: 0px; outline: 0px; padding: 0px; vertical-align: baseline;"><a href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjq4T9QFi3aujMYpKCnlJPieZyHyOUnX94cemxK9zvz2X1BbTFUgG6D7xOaYAoWzC_y0OzHKc-Pke-KdxxGwN4gcyCKZJwyiL_Kl6BSpdpSwu0mIfP0vzN6Ib75dn2pqjcnGkzdFHYFRd2gxGWto5giya_5T27x6JBnFaSPfFd1XvsCbPZ4044wnCYhEP-j/s1280/images.jfif" style="margin-left: 1em; margin-right: 1em;"><img alt="Explore job opportunities for caregivers and nurses. Enroll in our free nursing and caregiver courses to enhance your skills and boost your career prospects" border="0" data-original-height="1156" data-original-width="1280" height="289" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjq4T9QFi3aujMYpKCnlJPieZyHyOUnX94cemxK9zvz2X1BbTFUgG6D7xOaYAoWzC_y0OzHKc-Pke-KdxxGwN4gcyCKZJwyiL_Kl6BSpdpSwu0mIfP0vzN6Ib75dn2pqjcnGkzdFHYFRd2gxGWto5giya_5T27x6JBnFaSPfFd1XvsCbPZ4044wnCYhEP-j/w320-h289/images.jfif" title="Free Caregiver and Nursing Courses for Job Seekers" width="320" /></a></span></strong></div><p></p><p style="background: 0px 50% rgb(255, 255, 255); border: 0px; color: #333333; font-family: &quot;Open Sans&quot;, Arial, sans-serif; font-size: 22px; line-height: 1.6em; margin: 0px 0px 15px; outline: 0px; padding: 0px; vertical-align: baseline;"><strong style="background: 0px 50%; border: 0px; margin: 0px; outline: 0px; padding: 0px; vertical-align: baseline;"><span style="background: 0px 50%; border: 0px; font-family: georgia; line-height: 1.6em; margin: 0px; outline: 0px; padding: 0px; vertical-align: baseline;"><b style="background: 0px 50%; border: 0px; font-size: xx-large; margin: 0px; outline: 0px; padding: 0px; vertical-align: baseline;"><span style="background: 0px 50%; border: 0px; font-size: 22px; line-height: 1.6em; margin: 0px; outline: 0px; padding: 0px; vertical-align: baseline;"><a href="https://alison.com/course/diploma-in-caregiving-revised-2018?utm_source=alison_user&amp;utm_medium=affiliates&amp;utm_campaign=36843108" rel="nofollow" style="background: 0px 50%; border: 0px; color: #2b64ff; margin: 0px; outline: 0px; padding: 0px; text-decoration-line: none; transition: color 0.3s; vertical-align: baseline;" target="_blank"><span style="background: 0px 50%; border: 0px; color: white; line-height: 1.6em; margin: 0px; outline: 0px; padding: 0px; vertical-align: baseline;"><span color="rgb(51, 51, 51) !important" style="background: 0px 50% rgb(0, 123, 255); border-radius: 5px; border: 0px; box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px; display: inline-block; line-height: 1.6em; margin: 0px; outline: 0px; padding: 15px 25px; text-align: center; transition-duration: 0.3s; transition-property: background-color; vertical-align: baseline;">Diploma Caregiving course Click-Here-To Start Learning</span></span></a></span></b></span></strong></p>
+
+    </section>
+  </main>
+
+  
+</body>
 </html>
