--- a/index.html
+++ b/index.html
@@ -61,5 +61,18 @@ window.yaContextCb.push(() => {
 
 <div style="text-align: center;"><span style="font-size: medium;"><a href="https://www.paypalads.com/p/privacy-policy.html" target="_blank">Privacy policy</a> | <a href="https://www.paypalads.com/p/terms-and-conditions.html" target="_blank">Terms and Conditions</a> | <a href="https://www.paypalads.com/p/affiliate-marketing-and-adsense.html" target="_blank">Disclosure</a></span></div><div style="text-align: center;"><br /></div>
  
+<!-- Yandex.Metrika counter -->
+<script type="text/javascript">
+    (function(m,e,t,r,i,k,a){
+        m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+        m[i].l=1*new Date();
+        for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+        k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)
+    })(window, document,'script','https://mc.yandex.ru/metrika/tag.js', 'ym');
+
+    ym(103384265, 'init', {webvisor:true, clickmap:true, accurateTrackBounce:true, trackLinks:true});
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/103384265" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
 </body>
 </html>
