--- a/phd-Free-Online-Courses-in-Nursing-and-Caregiving.html
+++ b/phd-Free-Online-Courses-in-Nursing-and-Caregiving.html
@@ -10,9 +10,9 @@
   <meta name="description" content="Get a certified nursing or caregiver diploma online, completely free. Enroll now in these self-paced, accredited courses.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <style>
+<style>
   body {
-    font-family: 'Open Sans', Arial, sans-serif;
+    font-family: &#39;Open Sans&#39;, Arial, sans-serif;
     background-color: white;
     color: #333;
     line-height: 1.6;
@@ -132,8 +132,7 @@ window.yaContextCb.push(() => {
 })
 </script>
 
-<!-- Yandex.RTB R-A-16420903-1 -->
-<div id="yandex_rtb_R-A-16420903-1"></div>
+<!-- Yandex.RTB Script -->
 <script>
 window.yaContextCb.push(() => {
     Ya.Context.AdvManager.render({
@@ -143,6 +142,62 @@ window.yaContextCb.push(() => {
     })
 })
 </script>
+
+<!-- Left Sticky Side Rail Ad with "Advertisement" Label (Yandex) -->
+<div id="left-ad">
+  <div class="ad-label">Advertisement</div>
+  <!-- Yandex RTB Ad -->
+  <div id="yandex_rtb_R-A-16420903-1"></div>
+</div>
+
+<!-- Right Sticky Side Rail Ad with "Advertisement" Label (Yandex) -->
+<div id="right-ad">
+  <div class="ad-label">Advertisement</div>
+  <!-- Yandex RTB Ad -->
+  <div id="yandex_rtb_R-A-16420903-1"></div>
+</div>
+
+<!-- Sticky Side Rail Ad CSS -->
+<style>
+  #left-ad, #right-ad {
+    position: fixed;
+    top: 0; /* Start from the very top of the page */
+    width: 160px;
+    height: 600px;
+    z-index: 9999;
+  }
+
+  #left-ad {
+    left: 280px; /* Shifted 13 steps to the right (130px) */
+  }
+
+  #right-ad {
+    right: 60px; /* Shifted 6 steps to the left (60px) */
+  }
+
+  /* Ad label styling */
+  .ad-label {
+    position: absolute;
+    top: 10px;  /* Adjust to move the label down or up */
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    font-size: 14px;
+    font-weight: bold;
+    padding: 5px;
+    border-radius: 5px;
+    z-index: 10000;
+  }
+
+  /* Optional: Adjust the ad's position for smaller screens */
+  @media (max-width: 768px) {
+    #left-ad, #right-ad {
+      display: none;
+    }
+  }
+</style>
+
     
   <footer style="background:#f8f9fa; padding: 30px 20px; text-align: center; font-family: 'Open Sans', Arial, sans-serif; color: #333;">
   <a href="https://www.nursing-diploma-certificate.paypalads.com/" 
