--- a/phd-Free-Online-Courses-in-Nursing-and-Caregiving.html
+++ b/phd-Free-Online-Courses-in-Nursing-and-Caregiving.html
@@ -143,19 +143,38 @@ window.yaContextCb.push(() => {
 })
 </script>
 
-<!-- Left Sticky Side Rail Ad with "Advertisement" Label (Yandex) -->
+<!-- Google Ad Script -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2269884583846743" 
+     crossorigin="anonymous"></script>
+
+<!-- Left Sticky Side Rail Ad with "Advertisement" Label -->
 <div id="left-ad">
   <div class="ad-label">Advertisement</div>
-  <!-- Yandex RTB Ad -->
-  <div id="yandex_rtb_R-A-16420903-1"></div>
+  <!-- Vertical Ad -->
+  <ins class="adsbygoogle"
+       style="display:block; width: 160px; height: 600px;" 
+       data-ad-client="ca-pub-2269884583846743"
+       data-ad-slot="2115767840"
+       data-ad-format="auto"
+       data-full-width-responsive="true"></ins>
 </div>
 
-<!-- Right Sticky Side Rail Ad with "Advertisement" Label (Yandex) -->
+<!-- Right Sticky Side Rail Ad with "Advertisement" Label -->
 <div id="right-ad">
   <div class="ad-label">Advertisement</div>
-  <!-- Yandex RTB Ad -->
-  <div id="yandex_rtb_R-A-16420903-1"></div>
+  <!-- Vertical Ad -->
+  <ins class="adsbygoogle"
+       style="display:block; width: 160px; height: 600px;" 
+       data-ad-client="ca-pub-2269884583846743"
+       data-ad-slot="2115767840"
+       data-ad-format="auto"
+       data-full-width-responsive="true"></ins>
 </div>
+
+<!-- Google Ads Initialize -->
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 <!-- Sticky Side Rail Ad CSS -->
 <style>
@@ -168,7 +187,7 @@ window.yaContextCb.push(() => {
   }
 
   #left-ad {
-    left: 280px; /* Shifted 13 steps to the right (130px) */
+    left: 280px; /* Shifted 3 steps to the left (390px from the right) */
   }
 
   #right-ad {
@@ -197,6 +216,7 @@ window.yaContextCb.push(() => {
     }
   }
 </style>
+
 
     
   <footer style="background:#f8f9fa; padding: 30px 20px; text-align: center; font-family: 'Open Sans', Arial, sans-serif; color: #333;">
