--- a/phd-Free-Online-Courses-in-Nursing-and-Caregiving.html
+++ b/phd-Free-Online-Courses-in-Nursing-and-Caregiving.html
@@ -147,28 +147,24 @@ window.yaContextCb.push(() => {
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2269884583846743" 
      crossorigin="anonymous"></script>
 
-<!-- Left Sticky Side Rail Ad with "Advertisement" Label -->
+<!-- Left Sticky Side Rail Ad with "AD" Label -->
 <div id="left-ad">
-  <div class="ad-label">Advertisement</div>
-  <!-- Vertical Ad -->
+  <div class="ad-label">AD</div>
   <ins class="adsbygoogle"
        style="display:block; width: 160px; height: 600px;" 
+       data-ad-format="autorelaxed"
        data-ad-client="ca-pub-2269884583846743"
-       data-ad-slot="2115767840"
-       data-ad-format="auto"
-       data-full-width-responsive="true"></ins>
+       data-ad-slot="9322391019"></ins>
 </div>
 
-<!-- Right Sticky Side Rail Ad with "Advertisement" Label -->
+<!-- Right Sticky Side Rail Ad with "AD" Label -->
 <div id="right-ad">
-  <div class="ad-label">Advertisement</div>
-  <!-- Vertical Ad -->
+  <div class="ad-label">AD</div>
   <ins class="adsbygoogle"
        style="display:block; width: 160px; height: 600px;" 
+       data-ad-format="autorelaxed"
        data-ad-client="ca-pub-2269884583846743"
-       data-ad-slot="2115767840"
-       data-ad-format="auto"
-       data-full-width-responsive="true"></ins>
+       data-ad-slot="9322391019"></ins>
 </div>
 
 <!-- Google Ads Initialize -->
@@ -180,18 +176,18 @@ window.yaContextCb.push(() => {
 <style>
   #left-ad, #right-ad {
     position: fixed;
-    top: 0; /* Start from the very top of the page */
+    top: 0; /* Make ads start from the top of the page */
     width: 160px;
     height: 600px;
     z-index: 9999;
   }
 
   #left-ad {
-    left: -1100px; /* Shifted 10 steps to the left (1300px from the right) */
+    left: 0;
   }
 
   #right-ad {
-    right: 60px; /* Shifted 6 steps to the left (60px) */
+    right: 0;
   }
 
   /* Ad label styling */
