--- a/index.html
+++ b/index.html
@@ -120,9 +120,8 @@ window.yaContextCb.push(() => {
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2269884583846743" 
      crossorigin="anonymous"></script>
 
-<!-- Left Sticky Side Rail Ad with "AD" Label -->
+<!-- Left Sticky Side Rail Ad without Label -->
 <div id="left-ad">
-  <div class="ad-label"></div>
   <ins class="adsbygoogle"
        style="display:block; width: 160px; height: 600px;" 
        data-ad-format="autorelaxed"
@@ -130,9 +129,8 @@ window.yaContextCb.push(() => {
        data-ad-slot="9322391019"></ins>
 </div>
 
-<!-- Right Sticky Side Rail Ad with "AD" Label -->
+<!-- Right Sticky Side Rail Ad without Label -->
 <div id="right-ad">
-  <div class="ad-label"></div>
   <ins class="adsbygoogle"
        style="display:block; width: 160px; height: 600px;" 
        data-ad-format="autorelaxed"
@@ -156,26 +154,11 @@ window.yaContextCb.push(() => {
   }
 
   #left-ad {
-    left: 260px; /* Shifted 2 steps to the right (260px) */
+    left: -195px; /* Shifted 1.5 steps to the left (195px) */
   }
 
   #right-ad {
-    right: 260px; /* Shifted 2 steps to the left (260px) */
-  }
-
-  /* Ad label styling */
-  .ad-label {
-    position: absolute;
-    top: 10px;  /* Adjust to move the label down or up */
-    left: 50%;
-    transform: translateX(-50%);
-    background-color: rgba(0, 0, 0, 0.7);
-    color: white;
-    font-size: 14px;
-    font-weight: bold;
-    padding: 5px;
-    border-radius: 5px;
-    z-index: 10000;
+    right: -195px; /* Shifted 1.5 steps to the right (195px) */
   }
 
   /* Optional: Adjust the ad's position for smaller screens */
