--- a/phd-Free-Online-Courses-in-Nursing-and-Caregiving.html
+++ b/phd-Free-Online-Courses-in-Nursing-and-Caregiving.html
@@ -147,8 +147,9 @@ window.yaContextCb.push(() => {
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2269884583846743" 
      crossorigin="anonymous"></script>
 
-<!-- Left Sticky Side Rail Ad without Label -->
+<!-- Left Sticky Side Rail Ad with "AD" Label -->
 <div id="left-ad">
+  <div class="ad-label">.</div>
   <ins class="adsbygoogle"
        style="display:block; width: 160px; height: 600px;" 
        data-ad-format="autorelaxed"
@@ -156,8 +157,9 @@ window.yaContextCb.push(() => {
        data-ad-slot="9322391019"></ins>
 </div>
 
-<!-- Right Sticky Side Rail Ad without Label -->
+<!-- Right Sticky Side Rail Ad with "AD" Label -->
 <div id="right-ad">
+  <div class="ad-label">.</div>
   <ins class="adsbygoogle"
        style="display:block; width: 160px; height: 600px;" 
        data-ad-format="autorelaxed"
@@ -181,11 +183,26 @@ window.yaContextCb.push(() => {
   }
 
   #left-ad {
-    left: -195px; /* Shifted 1.5 steps to the left (195px) */
+    left: 0;
   }
 
   #right-ad {
-    right: -195px; /* Shifted 1.5 steps to the right (195px) */
+    right: 0;
+  }
+
+  /* Ad label styling */
+  .ad-label {
+    position: absolute;
+    top: 10px;  /* Adjust to move the label down or up */
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    font-size: 14px;
+    font-weight: bold;
+    padding: 5px;
+    border-radius: 5px;
+    z-index: 10000;
   }
 
   /* Optional: Adjust the ad's position for smaller screens */
@@ -195,6 +212,7 @@ window.yaContextCb.push(() => {
     }
   }
 </style>
+
 
     
   <footer style="background:#f8f9fa; padding: 30px 20px; text-align: center; font-family: 'Open Sans', Arial, sans-serif; color: #333;">
