--- a/phd-Free-Online-Courses-in-Nursing-and-Caregiving.html
+++ b/phd-Free-Online-Courses-in-Nursing-and-Caregiving.html
@@ -147,24 +147,26 @@ window.yaContextCb.push(() => {
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2269884583846743" 
      crossorigin="anonymous"></script>
 
-<!-- Left Sticky Side Rail Ad with "AD" Label -->
+<!-- Left Sticky Side Rail Ad with Label -->
 <div id="left-ad">
-  <div class="ad-label">.</div>
+  <div class="ad-label">AD</div>
   <ins class="adsbygoogle"
-       style="display:block; width: 160px; height: 600px;" 
-       data-ad-format="autorelaxed"
+       style="display:block; width: 160px; height: auto;" 
        data-ad-client="ca-pub-2269884583846743"
-       data-ad-slot="9322391019"></ins>
+       data-ad-slot="2115767840"
+       data-ad-format="auto"
+       data-full-width-responsive="true"></ins>
 </div>
 
-<!-- Right Sticky Side Rail Ad with "AD" Label -->
+<!-- Right Sticky Side Rail Ad with Label -->
 <div id="right-ad">
-  <div class="ad-label">.</div>
+  <div class="ad-label">AD</div>
   <ins class="adsbygoogle"
-       style="display:block; width: 160px; height: 600px;" 
-       data-ad-format="autorelaxed"
+       style="display:block; width: 160px; height: auto;" 
        data-ad-client="ca-pub-2269884583846743"
-       data-ad-slot="9322391019"></ins>
+       data-ad-slot="2115767840"
+       data-ad-format="auto"
+       data-full-width-responsive="true"></ins>
 </div>
 
 <!-- Google Ads Initialize -->
@@ -176,9 +178,8 @@ window.yaContextCb.push(() => {
 <style>
   #left-ad, #right-ad {
     position: fixed;
-    top: 0; /* Make ads start from the top of the page */
+    top: 20%; /* Adjust to your preference */
     width: 160px;
-    height: 600px;
     z-index: 9999;
   }
 
@@ -212,7 +213,6 @@ window.yaContextCb.push(() => {
     }
   }
 </style>
-
 
     
   <footer style="background:#f8f9fa; padding: 30px 20px; text-align: center; font-family: 'Open Sans', Arial, sans-serif; color: #333;">
