--- a/phd-Free-Online-Courses-in-Nursing-and-Caregiving.html
+++ b/phd-Free-Online-Courses-in-Nursing-and-Caregiving.html
@@ -178,7 +178,7 @@ window.yaContextCb.push(() => {
 <style>
   #left-ad, #right-ad {
     position: fixed;
-    top: 20%; /* Adjust to your preference */
+    top: 0; /* Change to 0 to stick the ads at the top of the page */
     width: 160px;
     z-index: 9999;
   }
@@ -213,6 +213,7 @@ window.yaContextCb.push(() => {
     }
   }
 </style>
+
 
     
   <footer style="background:#f8f9fa; padding: 30px 20px; text-align: center; font-family: 'Open Sans', Arial, sans-serif; color: #333;">
