--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ window.yaContextCb.push(() => {
 <style>
   #left-ad, #right-ad {
     position: fixed;
-    top: 20%; /* Adjust to your preference */
+    top: 0; /* Change to 0 to stick the ads at the top of the page */
     width: 160px;
     z-index: 9999;
   }
